# raycast-game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build.yml  format_check.yml
include/: raycaster.h
include/core/: game.h  window.h
scripts/: format-all.sh
src/: main.cpp
src/core/: game.cpp  window.cpp
